Attempt to reduce the number of pages.

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,9 +1,8 @@
 @inproceedings{rafael2014community,
 	title={Community Resources for Enabling Research in Distributed Scientific Workflows},
 	author={Ferreira da Silva, Rafael and Chen, Weiwei and Juve, Gideon and Vahi, Karan and Deelman, Ewa},
-	booktitle={the 10th IEEE International Conference on e-Science}, 
+	booktitle={10th IEEE Int. Conference on e-Science}, 
 	year={2014},
-	pages={to appear},
 }
 
 @article{diaconis1979conjugate,
@@ -14,7 +13,6 @@
   number={2},
   pages={269--281},
   year={1979},
-  publisher={Institute of Mathematical Statistics}
 }
 
 @article{nadarajah2008review,
@@ -25,7 +23,6 @@
   number={2},
   pages={131--140},
   year={2008},
-  publisher={Springer}
 }
 
 @inproceedings{yigitbasi2010analysis,
@@ -34,16 +31,14 @@
   booktitle={2010 11th IEEE/ACM International Conference on Grid Computing (GRID)},
   pages={65--72},
   year={2010},
-  organization={IEEE},
 }
 
 @inproceedings{da2013toward,
   title={Toward fine-grained online task characteristics estimation in scientific workflows},
   author={Ferreira da Silva, Rafael and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjam{\'\i}n and Livny, Miron},
-  booktitle={Proceedings of the 8th Workshop on Workflows in Support of Large-Scale Science},
+  booktitle={8th Workshop on Workflows in Support of Large-Scale Science},
   pages={58--67},
   year={2013},
-  organization={ACM}
 }
 
 @incollection{fahringer2007askalon,
@@ -52,7 +47,6 @@
   booktitle={Workflows for e-Science},
   pages={450--471},
   year={2007},
-  publisher={Springer}
 }
 
 @inproceedings{laforenza2007biological,
@@ -61,7 +55,6 @@
   booktitle={20th IEEE International Symposium on Computer-Based Medical Systems (CBMS'07)},
   pages={489--494},
   year={2007},
-  organization={IEEE}
 }
 
 @inproceedings{schuller2008chemomentum,
@@ -70,7 +63,6 @@
   booktitle={Euro-Par 2007 Workshops: Parallel Processing},
   pages={82--93},
   year={2008},
-  organization={Springer}
 }
 
 @incollection{taylor2007triana,
@@ -79,7 +71,6 @@
   booktitle={Workflows for e-Science},
   pages={320--339},
   year={2007},
-  publisher={Springer}
 }
 
 @incollection{plankensteiner2009fault,
@@ -88,7 +79,6 @@
   booktitle={Grid and Services Evolution},
   pages={1--13},
   year={2009},
-  publisher={Springer}
 }
 
 @INPROCEEDINGS{Plankensteiner2009, 
@@ -128,17 +118,10 @@ pages={14},
 @inproceedings{Iosup2008,
  author = {Iosup, Alexandru and Sonmez, Ozan and Anoep, Shanny and Epema, Dick},
  title = {The Performance of Bags-of-tasks in Large-scale Distributed Systems},
- booktitle = {Proceedings of the 17th International Symposium on High Performance Distributed Computing},
+ booktitle = {17th International Symposium on High Performance Distributed Computing},
  series = {HPDC '08},
  year = {2008},
- isbn = {978-1-59593-997-5},
- location = {Boston, MA, USA},
  pages = {97--108},
- numpages = {12},
- acmid = {1383435},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {bags-of-tasks, batches of jobs, large-scale distributed systems, multi-cluster systems, performance evaluation, prediction, scheduling, trace-based simulation, workload modeling},
 } 
 
 
@@ -239,11 +222,10 @@ pages={557-563},
 @inproceedings{Adamuthe2011,
  author = {Adamuthe, A. C. and Bichkar, R. S.},
  title = {Minimizing job completion time in grid scheduling with resource and timing constraints using genetic algorithm},
- booktitle = {Proceedings of the International Conference \&\#38; Workshop on Emerging Trends in Technology},
+ booktitle = {International Conference \&\#38; Workshop on Emerging Trends in Technology},
  series = {ICWET '11},
  year = {2011},
  isbn = {978-1-4503-0449-8},
- location = {Mumbai, Maharashtra, India},
  pages = {338--343},
  numpages = {6},
  acmid = {1980097},
@@ -298,11 +280,10 @@ author = "Nithiapidary Muthuvelu and Christian Vecchiola and Ian Chai and Eswara
 @inproceedings{Babu2012,
  author = {Babu, K. R. Remesh and Mathiyalagan, P. and Sivanandam, S. N.},
  title = {Task scheduling using ACO-BP neural network in computational grids},
- booktitle = {Proceedings of the International Conference on Advances in Computing, Communications and Informatics},
+ booktitle = {International Conference on Advances in Computing, Communications and Informatics},
  series = {ICACCI '12},
  year = {2012},
  isbn = {978-1-4503-1196-0},
- location = {Chennai, India},
  pages = {428--432},
  numpages = {5},
  acmid = {2345467},
@@ -313,11 +294,10 @@ author = "Nithiapidary Muthuvelu and Christian Vecchiola and Ian Chai and Eswara
 @inproceedings{Adamuthe2011,
  author = {Adamuthe, A. C. and Bichkar, R. S.},
  title = {Minimizing job completion time in grid scheduling with resource and timing constraints using genetic algorithm},
- booktitle = {Proceedings of the International Conference \&\#38; Workshop on Emerging Trends in Technology},
+ booktitle = {International Conference \&\#38; Workshop on Emerging Trends in Technology},
  series = {ICWET '11},
  year = {2011},
  isbn = {978-1-4503-0449-8},
- location = {Mumbai, Maharashtra, India},
  pages = {338--343},
  numpages = {6},
  acmid = {1980097},
@@ -388,11 +368,10 @@ pages={612-619},
 @inproceedings{Yusuf2009,
  author = {Yusuf, Iman I. and Schmidt, Heinz W. and Peake, Ian D.},
  title = {Evaluating recovery aware components for grid reliability},
- booktitle = {Proceedings of the the 7th joint meeting of the European software engineering conference and the ACM SIGSOFT symposium on The foundations of software engineering},
+ booktitle = {the 7th joint meeting of the European software engineering conference and the ACM SIGSOFT symposium on The foundations of software engineering},
  series = {ESEC/FSE '09},
  year = {2009},
  isbn = {978-1-60558-001-2},
- location = {Amsterdam, The Netherlands},
  pages = {277--280},
  numpages = {4},
  acmid = {1595741},
@@ -405,20 +384,18 @@ pages={612-619},
 	isbn={978-3-642-40046-9},
 	booktitle={Euro-Par 2013 Parallel Processing},
 	volume={8097},
-	series={Lecture Notes in Computer Science},
+	series={LNCS},
 	title={On-Line, Non-clairvoyant Optimization of Workflow Activity Granularity on Grids},
-	publisher={Springer Berlin Heidelberg},
 	author={Ferreira da Silva, Rafael and Glatard, Tristan and Desprez, Fr\'ed\'eric},
 	pages={255-266}
 }
 @inproceedings{daSilva2011,
  author = {da Silva, Jacques A. and Rebello, Vinod E. F.},
  title = {A hybrid fault tolerance scheme for EasyGrid MPI applications},
- booktitle = {Proceedings of the 9th International Workshop on Middleware for Grids, Clouds and e-Science},
+ booktitle = {9th International Workshop on Middleware for Grids, Clouds and e-Science},
  series = {MGC '11},
  year = {2011},
  isbn = {978-1-4503-1068-0},
- location = {Lisbon, Portugal},
  pages = {4:1--4:6},
  articleno = {4},
  numpages = {6},
@@ -462,11 +439,10 @@ year={2002},
 @inproceedings{Shankar2007,
  author = {Shankar, Srinath and DeWitt, David J.},
  title = {Data driven workflow planning in cluster management systems},
- booktitle = {Proceedings of the 16th international symposium on High performance distributed computing},
+ booktitle = {16th international symposium on High performance distributed computing},
  series = {HPDC '07},
  year = {2007},
  isbn = {978-1-59593-673-8},
- location = {Monterey, California, USA},
  pages = {127--136},
  numpages = {10},
  acmid = {1272383},
@@ -487,11 +463,10 @@ ISSN={1063-6927},
 @inproceedings{Meyer2006,
  author = {Meyer, Luiz and Annis, James and Wilde, Mike and Mattoso, Marta and Foster, Ian},
  title = {Planning spatial workflows to optimize grid performance},
- booktitle = {Proceedings of the 2006 ACM symposium on Applied computing},
+ booktitle = {2006 ACM symposium on Applied computing},
  series = {SAC '06},
  year = {2006},
  isbn = {1-59593-108-2},
- location = {Dijon, France},
  pages = {786--790},
  numpages = {5},
  acmid = {1141456},
@@ -575,10 +550,9 @@ year={2008},
 isbn={978-3-540-89893-1},
 booktitle={High Performance Computing - HiPC 2008},
 volume={5374},
-series={Lecture Notes in Computer Science},
+series={LNCS},
 editor={Sadayappan, Ponnuswamy and Parashar, Manish and Badrinath, Ramamurthy and Prasanna, ViktorK.},
 title={Performance Analysis of Multiple Site Resource Provisioning: Effects of the Precision of Availability Information},
-publisher={Springer Berlin Heidelberg},
 author={Assunção, MarcosDias and Buyya, Rajkumar},
 pages={157-168}
 },
@@ -622,7 +596,6 @@ year={2011},
 issn={0920-8542},
 journal={The Journal of Supercomputing},
 title={Enabling workflows in GridSolve: request sequencing and service trading},
-publisher={Springer US},
 keywords={Grid computing; Workflow applications; Service trading},
 author={Li, Yinan and YarKhan, Asim and Dongarra, Jack and Seymour, Keith and Hurault, Aurèlie},
 pages={1-20},
@@ -632,11 +605,10 @@ pages={1-20},
 @inproceedings{Caniou2011,
  author = {Caniou, Yves and Charrier, Ghislain and Desprez, Fr{\'e}d{\'e}ric},
  title = {Evaluation of reallocation heuristics for moldable tasks in computational grids},
- booktitle = {Proceedings of the Ninth Australasian Symposium on Parallel and Distributed Computing - Volume 118},
+ booktitle = {Ninth Australasian Symposium on Parallel and Distributed Computing - Volume 118},
  series = {AusPDC '11},
  year = {2011},
  isbn = {978-1-920682-98-9},
- location = {Perth, Australia},
  pages = {15--24},
  numpages = {10},
  acmid = {2461249},
@@ -681,11 +653,10 @@ pages={441-448},
 @inproceedings{Calasanz2008,
  author = {Tolosana-Calasanz, Rafael and Rana, Omer F. and Ba\~{n}ares, Jos{\'e} A.},
  title = {Automating Performance Analysis from Taverna Workflows},
- booktitle = {Proceedings of the 11th International Symposium on Component-Based Software Engineering},
+ booktitle = {11th International Symposium on Component-Based Software Engineering},
  series = {CBSE '08},
  year = {2008},
  isbn = {978-3-540-87890-2},
- location = {Karlsruhe, Germany},
  pages = {1--15},
  numpages = {15},
  acmid = {1478089},
@@ -703,15 +674,15 @@ pages={310-317},
 @inproceedings{jrad2013broker,
   title={A broker-based framework for multi-cloud workflows},
   author={Jrad, Foued and Tao, Jie and Streit, Achim},
-  booktitle={Proceedings of the 2013 international workshop on Multi-cloud applications and federated clouds},
+  booktitle={2013 international workshop on Multi-cloud applications and federated clouds},
   pages={61--68},
   year={2013},
-  organization={ACM}
 }
 
 @INPROCEEDINGS{Chen2012, 
 author={Weiwei Chen and Ewa Deelman}, 
-booktitle={IEEE Eighth World Congress on Services (SERVICES)}, title={Fault Tolerant Clustering in Scientific Workflows}, 
+booktitle={IEEE Eighth World Congress on Services}, 
+title={Fault Tolerant Clustering in Scientific Workflows}, 
 year={2012}, 
 pages={9-16}, 
 },
@@ -738,7 +709,7 @@ pages={86-93},
   booktitle = {Algorithms and Architectures for Parallel Processing},
   year = {2010},
   volume = {6081},
-  series = {Lecture Notes in Computer Science},
+  series = {LNCS},
   pages = {266-277}
 }
 @INPROCEEDINGS{4493929,
@@ -754,7 +725,7 @@ pages={86-93},
 	title={A Dynamic Job Grouping-Based Scheduling for Deploying Applications with Fine-Grained Tasks on Global Grids},
 	author={Nithiapidary Muthuvelu and Junyang Liu and Nay Lin Soe and Srikumar Venugopal and Anthony Sulistio and Rajkumar Buyya},
 	year={2005},
-	booktitle={Proceedings of the 2005 Australasian workshop on Grid computing and e-research},
+	booktitle={2005 Australasian workshop on Grid computing and e-research},
 },
 
 @inproceedings{Integration2012,
@@ -783,25 +754,21 @@ pages={86-93},
 @inproceedings{Sonmez2010,
  author = {Sonmez, Ozan and Yigitbasi, Nezih and Abrishami, Saeid and Iosup, Alexandru and Epema, Dick},
  title = {Performance analysis of dynamic workflow scheduling in multicluster grids},
- booktitle = {Proceedings of the 19th ACM International Symposium on High Performance Distributed Computing},
+ booktitle = {19th ACM International Symposium on High Performance Distributed Computing},
  series = {HPDC '10},
  year = {2010},
  isbn = {978-1-60558-942-8},
- location = {Chicago, Illinois},
  pages = {49--60},
  numpages = {12},
  acmid = {1851483},
- publisher = {ACM},
- address = {New York, NY, USA},
 } ,
 
 @inproceedings{Sonmez2009,
   title={Trace-based evaluation of job runtime and queue wait time predictions in grids},
   author={Sonmez, Ozan and Yigitbasi, Nezih and Iosup, Alexandru and Epema, Dick},
-  booktitle={Proceedings of the 18th ACM international symposium on High performance distributed computing},
+  booktitle={18th ACM international symposium on High performance distributed computing},
   pages={111--120},
   year={2009},
-  organization={ACM}
 },
 
 @inproceedings{Stratan2008,
@@ -810,7 +777,6 @@ pages={86-93},
   booktitle={9th IEEE/ACM International Conference on Grid Computing},
   pages={25--32},
   year={2008},
-  organization={IEEE}
 },
 
 @article{Zheng2011,
@@ -821,7 +787,6 @@ pages={86-93},
   number={4},
   pages={371--385},
   year={2011},
-  publisher={SAGE Publications}
 },
 
 @article{Callaghan2010,
@@ -832,23 +797,15 @@ pages={86-93},
   number={6},
   pages={428--446},
   year={2010},
-  publisher={Elsevier}
 },
 
 @inproceedings{Maheshwari2012,
  author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
  title = {Job and data clustering for aggregate use of multiple production cyberinfrastructures},
- booktitle = {Proceedings of the fifth international workshop on Data-Intensive Distributed Computing Date},
+ booktitle = {fifth international workshop on Data-Intensive Distributed Computing Date},
  series = {DIDC '12},
  year = {2012},
- isbn = {978-1-4503-1341-4},
- location = {Delft, The Netherlands},
  pages = {3--12},
- numpages = {10},
- acmid = {2287000},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {hpc, implementation, parallel, scec, scripting, swift},
 },
 
 @article{Malawski2012,
@@ -863,7 +820,6 @@ pages={86-93},
   author={Abrishami, Saeid and Naghibzadeh, Mahmoud and Epema, Dick},
   journal={Future Generation Computer Systems},
   year={2012},
-  publisher={Elsevier}
 },
 
 @article{Yuan2010,
@@ -874,16 +830,14 @@ pages={86-93},
   number={8},
   pages={1200--1214},
   year={2010},
-  publisher={Elsevier}
 },
 
 @inproceedings{Hefeeda2012,
   title={Distributed approximate spectral clustering for large-scale datasets},
   author={Hefeeda, Mohamed and Gao, Fei and Abd-Almageed, Wael},
-  booktitle={Proceedings of the 21st international symposium on High-Performance Parallel and Distributed Computing},
+  booktitle={21st international symposium on High-Performance Parallel and Distributed Computing},
   pages={223--234},
   year={2012},
-  organization={ACM}
 },
 
 @inproceedings{Hedayat2009,
@@ -892,7 +846,6 @@ pages={86-93},
   booktitle={Parallel and Distributed Processing with Applications, 2009 IEEE International Symposium on},
   pages={106--112},
   year={2009},
-  organization={IEEE}
 },
 
 @inproceedings{Zhang2009,
@@ -901,7 +854,6 @@ pages={86-93},
   booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID'09)},
   pages={244--251},
   year={2009},
-  organization={IEEE}
 },
 
 @inproceedings{Jones2004,
@@ -910,7 +862,6 @@ pages={86-93},
   booktitle={Cluster Computing, 2004 IEEE International Conference on},
   pages={45--54},
   year={2004},
-  organization={IEEE}
 },
 
 @inproceedings{Sonmez2006,
@@ -919,7 +870,6 @@ pages={86-93},
   booktitle={Second IEEE International Conference on e-Science and Grid Computing (e-Science'06)},
   pages={79--79},
   year={2006},
-  organization={IEEE}
 },
 @INPROCEEDINGS{Oprescu2010, 
 author={Oprescu, A. and Kielmann, T.}, 
@@ -943,26 +893,22 @@ address = {Los Alamitos, CA, USA},
 @INPROCEEDINGS{Chen2013a,
   author = {Chen, Weiwei and Deelman, Ewa and Sakellariou, Rizos},
   title = {Imbalance optimization in scientific workflows},
-  booktitle = {Proceedings of the 27th international ACM conference on International conference on supercomputing},
+  booktitle = {27th international ACM conference on International conference on supercomputing},
   year = {2013},
-  series = {ICS '13},
   pages = {461--462},
-  numpages = {2}
 }
 
 @inproceedings{Lifflander2012,
 	author={Jonathan Lifflander and Sriram Krishnamoorthy and Laxmikant V. Kale},
 	title={Work Stealing and Persistence-based Load Balancers for Iterative Overdecomposed Applications},
-	booktitle={Proceedings of the 21st international symposium on High-Performance Parallel and Distributed Computing}, 
-	month=Jun,
+	booktitle={21st international symposium on High-Performance Parallel and Distributed Computing}, 
 	year={2012},
 },
 
 @inproceedings{Rynge2012,
 	author={Rynge Mats and Gideon Juve and Karan Vahi and Scott Callaghan and Gaurang Mehta and Philip J. Maechling andEwa Deelman},
 	title={Enabling Large-scale Scientific Workflows on Petascale Resources Using MPI Master/Worker},
-	booktitle={Proceedings of the 1st conference of the Extreme Science and Engineering Discovery Environment}, 
-	month=jul,
+	booktitle={1st conference of the Extreme Science and Engineering Discovery Environment}, 
 	year={2012},
 },
 
@@ -1020,29 +966,22 @@ pages={167-},
 },
 
 @inproceedings{Sahoo2004,
-	author={Ramendra K. Sahoo and
-	Anand Sivasubramaniam and
-	Mark S. Squillante and
-	Yanyong Zhang},
+	author={Ramendra K. Sahoo and Anand Sivasubramaniam and Mark S. Squillante and Yanyong Zhang},
 	title={Failure Data Analysis of a Large-Scale Heterogeneous Server Environment},
-	booktitle={Proceedings of the International Conference on Dependable Systems and Networks},
-	month=jul,
+	booktitle={International Conf. on Dependable Systems and Networks},
 	year={2004},
 },
 
 @inproceedings{Tang1990,
-	author={Dong Tang and 
-	Ravishankar K. Iyer and
-	 Sujatha S. Subramani},
+	author={Dong Tang and et al.},
 	title={Failure Analysis and Modeling of a VAXcluster System},
-	booktitle={Proceedings of the International Symposium on Fault-tolerant computing},
+	booktitle={Int. Symp. on Fault-tolerant computing},
 	year={1990},
 },
 @inproceedings{Schroeder2006,
 	author={Bianca Schroeder and Garth A. Gibson},
 	title={A large-scale study of failures in high-performance computing systems},
-	booktitle={Proceedings of the International Conference on Dependable Systems and Networks},
-	month=jun,
+	booktitle={Int. Conf. on Dependable Systems and Networks},
 	year={2006},
 },
 
@@ -1073,17 +1012,17 @@ pages={167-},
 @inproceedings{Chen2011,
 	author ={Weiwei Chen and Ewa Deelman},
 	title={Workflow Overhead Analysis and Optimizations}, 
-	booktitle={The 6th Workshop on Workflows in Support of Large-Scale Science},
-	month=nov,
+	booktitle={6th Workshop on Workflows in Support of Large-Scale Science},
 	year={2011},
 },
 
 
 @INPROCEEDINGS{Rubing2009, 
-author={Rubing Duan and Nadeem, F. and Jie Wang and Yun Zhang and Prodan, R. and Fahringer, T.}, 
-booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID '09)}, title={A Hybrid Intelligent Method for Performance Modeling and Prediction of Workflow Activities in Grids}, 
-year={2009}, 
-pages={339-347}, 
+	author={Rubing Duan and Nadeem, F. and Jie Wang and Yun Zhang and Prodan, R. and Fahringer, T.}, 
+	booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid}, 
+	title={A Hybrid Intelligent Method for Performance Modeling and Prediction of Workflow Activities in Grids}, 
+	year={2009}, 
+	pages={339-347}, 
 },
 
 @inproceedings{Rubing2005,
@@ -1113,12 +1052,11 @@ pages={339-347},
   author={Ruiz, D.D. and Liu, L. and Pu, C. and Georgia Institute of Technology. College of Computing},
   series={GIT-CC},
   year={2002},
-  publisher={College of Computing, Georgia Institute of Technology},
 },
 @inproceedings{Kalayci2010,
 author={S. Kalayci and G. Dasgupta and L. Fong and O. Ezenwoye and and S. Sadjadi},
 title={Distributed and adaptive execution of condor dagman workflows},
-booktitle={Proceedings of the 22nd International Conference on Software Engineering and Knowledge Engineering (SEKE'2010)},
+booktitle={22nd International Conference on Software Engineering and Knowledge Engineering},
 year={2010},
 month=jul,
 },
@@ -1137,7 +1075,7 @@ month=jul,
    author={Ling Liu and
 	         Calton Pu},
 	title={Methodical Restructuring of Complex Workflow Activities},
-	booktitle={Proceedings of the 14th International COnference on Data Engineering},
+	booktitle={14th International Conference on Data Engineering},
     	year={1998},
  	month=jan,
 },
@@ -1280,7 +1218,7 @@ pages={389 -400},
 @inproceedings{Abrishami2010,
     author = {Abrishami, Saeid and Naghibzadeh, Mahmoud and Epema, Dick},
     title = {Cost-driven Scheduling of Grid Workflows Using Partial Critical Paths},
-    booktitle = {Proceedings of the 11th {IEEE/ACM} International Conference on Grid Computing},
+    booktitle = {11th {IEEE/ACM} International Conference on Grid Computing},
     year = {2010}
 }
 
@@ -1415,7 +1353,7 @@ pages={389 -400},
 @inproceedings{Brehm1995,
     author = {Brehm, Jürgen and Madhukar, Manish and Smirni, Evgenia and Dowdy, Larry},
     title = {{PerPreT} - A Performance Prediction Tool for Massively Parallel Systems},
-    booktitle = {Proceedings of the Joint Conference on Performance Tools / {MMB}},
+    booktitle = {Joint Conference on Performance Tools / {MMB}},
     year = {1995}
 },
 
@@ -1427,24 +1365,23 @@ pages={389 -400},
 },
 
 @inproceedings{Bresnahan2011,
-    author = {Bresnahan, J. and Freeman, T. and {LaBissoniere}, D. and Keahey, K.},
+    author = {Bresnahan, J. and Freeman, T. and et al.},
     title = {Managing Appliance Launches in Infrastructure Clouds},
     booktitle = {Teragrid Conference},
-    month = jul,
     year = {2011}
 },
 
 @inproceedings{Breuer2004,
     author = {Breuer, Dirk and Erwin, Dietmar and Mallmann, Daniel and Menday, Roger and Romberg, Mathilde and Sander, Volker and Schuller, Bernd and Wieder, Philipp},
     title = {Scientific Computing with {UNICORE}},
-    booktitle = {Proceedings of the {NIC} Symposium},
+    booktitle = {{NIC} Symposium},
     year = {2004}
 },
 
 @inproceedings{Brim2001,
     author = {Brim, Michael J. and Mattson, Timothy G. and Scott, Stephen L.},
     title = {{OSCAR:} Open Source Cluster Application Resources},
-    booktitle = {Proceedings of the Ottowa Linux Symposium},
+    booktitle = {Ottowa Linux Symposium},
     year = {2001}
 },
 
@@ -1481,7 +1418,7 @@ pages={389 -400},
 @inproceedings{Byun2008,
     author = {Byun, {Eun-Kyu} and Kee, {Yang-Suk} and Deelman, E. and Vahi, K. and Mehta, G. and {Jin-Soo} Kim},
     title = {Estimating Resource Needs for {Time-Constrained} Workflows},
-    booktitle = {{Proceedings of the 4th IEEE International Conference on e-Science (e-Science '08)}},
+    booktitle = {{4th IEEE International Conference on e-Science (e-Science '08)}},
     year = {2008}
 },
 
@@ -1499,7 +1436,7 @@ pages={389 -400},
 @inproceedings{Callaghan2008,
     author = {Callaghan, Scott and Maechling, Phil and Deelman, Ewa and Vahi, Karan and Mehta, Gaurang and Juve, Gideon and Milner, Kevin and Graves, Robert and Field, Edward and Okaya, David and Jordan, Thomas},
     title = {{Reducing Time-to-Solution Using Distributed High-Throughput Mega-Workflows: Experiences from SCEC CyberShake}},
-    booktitle = {{Proceedings of the 4th IEEE International Conference on e-Science (e-Science '08)}},
+    booktitle = {{4th IEEE International Conference on e-Science (e-Science '08)}},
     year = {2008}
 },
 
@@ -1632,11 +1569,9 @@ pages={389 -400},
   author = {Tolosana-Calasanz, Rafael and Lackovic, Marco and F Rana, Omer and
 	Ba{\~n}ares, Jos{\'e} {\'A} and Talia, Domenico},
   title = {Characterizing quality of resilience in scientific workflows},
-  booktitle = {Proceedings of the 6th workshop on Workflows in support of large-scale
-	science},
+  booktitle = {6th workshop on Workflows in support of large-scale science},
   year = {2011},
   pages = {117--126},
-  organization = {ACM}
 }
 
 @ARTICLE{Ali2004, 
@@ -1669,8 +1604,7 @@ ISSN={1045-9219},},
 @inproceedings{Deelman2006,
     author = {Deelman, Ewa and Callaghan, Scott and Field, Edward and Francoeur, Hunter and Graves, Robert and Gupta, Nitin and Gupta, Vipin and Jordan, Thomas H. and Kesselman, Carl and Maechling, Philip and Mehringer, John and Mehta, Gaurang and Okaya, David and Vahi, Karan and Zhao, Li},
     title = {Managing {Large-Scale} Workflow Execution from Resource Provisioning to Provenance Tracking: The {CyberShake} Example},
-    booktitle = {Proceedings of the 2nd {IEEE} International Conference on {e-Science} and Grid Computing ({e-Science} 06)},
-    month = dec,
+    booktitle = {2nd {IEEE} International Conference on {e-Science} and Grid Computing},
     year = {2006}
 },
 
@@ -1687,7 +1621,7 @@ ISSN={1045-9219},},
 @inproceedings{Deelman2008,
     author = {Deelman, Ewa and Singh, Gurmeet and Livny, Miron and Berriman, Bruce and Good, John},
     title = {The Cost of Doing Science on the Cloud: The Montage Example},
-    booktitle = {{Proceedings of the 2008 ACM/IEEE Conference on Supercomputing}},
+    booktitle = {{2008 ACM/IEEE Conference on Supercomputing}},
     year = {2008}
 },
 
@@ -1716,7 +1650,7 @@ ISSN={1045-9219},},
 @inproceedings{DeRoure2007,
     author = {David {De Roure} and Goble, Carole A. and Stevens, Robert},
     title = {Designing the {myExperiment} Virtual Research Environment for the Social Sharing of Workflows},
-    booktitle = {{Proceedings of the {IEEE} International Conference on e-Science and Grid Computing (e-Science '07)}},
+    booktitle = {{{IEEE} International Conference on e-Science and Grid Computing}},
     year = {2007}
 },
 
@@ -1733,21 +1667,21 @@ ISSN={1045-9219},},
 @inproceedings{Dongarra2007,
     author = {Dongarra, Jack J. and Jeannot, Emmanuel and Saule, Erik and Shi, Zhiao},
     title = {{Bi-objective Scheduling Algorithms for Optimizing Makespan and Reliability on Heterogeneous Systems}},
-    booktitle = {{Proceedings of the 19th Annual ACM Symposium on Parallel Algorithms and Architectures (SPAA '07)}},
+    booktitle = {{19th Annual ACM Symposium on Parallel Algorithms and Architectures}},
     year = {2007}
 },
 
 @inproceedings{Downey1997,
     author = {Downey, {A.B.}},
     title = {Predicting queue times on space-sharing parallel computers},
-    booktitle = {Proceedings of the 11th International Parallel Processing Symposium},
+    booktitle = {11th International Parallel Processing Symposium},
     year = {1997}
 },
 
 @inproceedings{Dun2010,
     author = {Dun, Nan and Taura, Kenjiro and Yonezawa, Akinori},
     title = {{ParaTrac:} A fine-grained profiler for data-intensive workflows},
-    booktitle = {{Proceedings of the 19th ACM International Symposium on High Performance Distributed Computing (HPDC 2010)}},
+    booktitle = {{19th ACM International Symposium on High Performance Distributed Computing (HPDC 2010)}},
     year = {2010}
 },
 
@@ -1889,7 +1823,7 @@ ISSN={1045-9219},},
     author = {Gibbons, Richard},
     title = {A historical application profiler for use by parallel schedulers},
     booktitle = {Job Scheduling Strategies for Parallel Processing},
-    series = {Lecture Notes in Computer Science},
+    series = {LNCS},
     volume = {1291},
     year = {1997}
 },
@@ -1918,7 +1852,7 @@ ISSN={1045-9219},},
     author = {Goldenberg, Mark and Lu, Paul and Schaeffer, Jonathan},
     title = {{TrellisDAG: A System for Structured DAG Scheduling}},
     booktitle = {Job Scheduling Strategies for Parallel Processing},
-    series = {Lecture Notes in Computer Science},
+    series = {LNCS},
     volume = {2862},
     year = {2003},
     pages = {21--43}
@@ -1961,7 +1895,7 @@ ISSN={1045-9219},},
 @inproceedings{Groth2009,
     author = {Groth, Paul and Deelman, Ewa and Juve, Gideon and Mehta, Gaurang and Berriman, Bruce},
     title = {Pipeline-centric provenance model},
-    booktitle = {Proceedings of the 4th Workshop on Workflows in Support of {Large-Scale} Science},
+    booktitle = {4th Workshop on Workflows in Support of {Large-Scale} Science},
     year = {2009}
 },
 
@@ -2002,7 +1936,7 @@ ISSN={1045-9219},},
 @inproceedings{Huang2007,
     author = {Huang, Richard and Chien, Andrew and Casanova, Henri},
     title = {Automatic Resource Specification Generation for Resource Selection},
-    booktitle = {Proceedings of the 2007 {ACM/IEEE} conference on Supercomputing},
+    booktitle = {{ACM/IEEE} conference on Supercomputing},
     year = {2007}
 },
 
@@ -2036,14 +1970,14 @@ ISSN={1045-9219},},
 @inproceedings{Jackson2010a,
     author = {Jackson, Keith R and Ramakrishnan, Lavanya and Muriki, Krishna and Canon, Shane and Cholia, Shreyas and Shalf, John and Wasserman, Harvey J. and Wright, Nicholas J.},
     title = {Performance Analysis of High Performance Computing Applications on the Amazon Web Services Cloud},
-    booktitle = {Proceedings of Cloudcomp 2010},
+    booktitle = {Cloudcomp 2010},
     year = {2010}
 },
 
 @inproceedings{Jackson2010b,
     author = {Jackson, Keith R and Ramakrishnan, Lavanya and Runge, Karl J and Thomas, Rollin C},
     title = {Seeking supernovae in the clouds: a performance study},
-    booktitle = {Proceedings of the 19th {ACM} International Symposium on High Performance Distributed Computing},
+    booktitle = {19th {ACM} International Symposium on High Performance Distributed Computing},
     year = {2010}
 },
 
@@ -2193,7 +2127,7 @@ ISSN={1045-9219},},
 @inproceedings{Kondo2009,
     author = {Kondo, Derrick and Javadi, Bahman and Malecot, Paul and Cappello, Franck and Anderson, David P},
     title = {Cost-benefit analysis of Cloud Computing versus desktop grids},
-    booktitle = {Proceedings of the {IEEE} International Symposium on Parallel \& Distributed Processing},
+    booktitle = {{IEEE} International Symposium on Parallel \& Distributed Processing},
     year = {2009}
 },
 
@@ -2239,7 +2173,7 @@ ISSN={1045-9219},},
 @inproceedings{Lee2008,
     author = {Lee, Kevin and Paton, Norman W and Sakellariou, Rizos and Deelman, Ewa and Fernandes, Alvaro A. A and Mehta, Gaurang},
     title = {Adaptive Workflow Processing and Execution in Pegasus},
-    booktitle = {Proceedings of the 3rd International Conference on Grid and Pervasive Computing Workshops},
+    booktitle = {3rd International Conference on Grid and Pervasive Computing Workshops},
     year = {2008}
 },
 
@@ -2342,7 +2276,7 @@ ISSN={1045-9219},},
 @inproceedings{Mattson2001,
     author = {Mattson, {T.G.}},
     title = {High performance computing at Intel: the {OSCAR} software solution stack for cluster computing},
-    booktitle = {Proceedings of the 1st {IEEE/ACM} International Symposium on Cluster Computing and the Grid {(CCGrid} 2001)},
+    booktitle = {1st {IEEE/ACM} International Symposium on Cluster Computing and the Grid {(CCGrid} 2001)},
     year = {2001}
 },
 
@@ -2405,7 +2339,7 @@ ISSN={1045-9219},},
 @inproceedings{Napper2009,
     author = {Napper, Jeffrey and Bientinesi, Paolo},
     title = {Can Cloud Computing Reach the Top500?},
-    booktitle = {Proceedings of the Workshop on {UnConventional} High Performance Computing},
+    booktitle = {Workshop on {UnConventional} High Performance Computing},
     year = {2009}
 },
 
@@ -2540,7 +2474,7 @@ ISSN={1045-9219},},
 @inproceedings{Palankar2008,
     author = {Palankar, Mayur R. and Iamnitchi, Adriana and Ripeanu, Matei and Garfinkel, Simson},
     title = {Amazon S3 for science grids: a viable solution?},
-    booktitle = {Proceedings of the 2008 international workshop on Data-aware distributed computing {(DADC} 08)},
+    booktitle = {2008 international workshop on Data-aware distributed computing {(DADC} 08)},
     year = {2008}
 },
 
@@ -2703,7 +2637,7 @@ ISSN={1045-9219},},
 @inproceedings{Schopf1998,
     author = {Schopf, Jennifer and Berman, Francine},
     title = {Performance Prediction in Production Environments},
-    booktitle = {Proceedings of the First Merged International Parallel Processing Symposium and Symposium on Parallel and Distributed Processing {(IPPS/SPDP} 98)},
+    booktitle = {First Merged International Parallel Processing Symposium and Symposium on Parallel and Distributed Processing {(IPPS/SPDP} 98)},
     year = {1998}
 },
 
@@ -2752,14 +2686,14 @@ ISSN={1045-9219},},
 @inproceedings{Singh2006,
     author = {Singh, Gurmeet and Kesselman, Carl and Deelman, Ewa},
     title = {{Application-Level} Resource Provisioning on the Grid},
-    booktitle = {Proceedings of the 2nd {IEEE} International Conference on {e-Science} and Grid Computing},
+    booktitle = {2nd {IEEE} International Conference on {e-Science} and Grid Computing},
     year = {2006}
 },
 
 @inproceedings{Singh2007,
     author = {Singh, Gurmeet and Kesselman, Carl and Deelman, Ewa},
     title = {A Provisioning Model and its Comparison with {Best-Effort} for {Performance-Cost} Optimization in Grids},
-    booktitle = {Proceedings of the 16th international symposium on High performance distributed computing {(HPDC} '07)},
+    booktitle = {16th international symposium on High performance distributed computing {(HPDC} '07)},
     year = {2007}
 },
 
@@ -2892,7 +2826,7 @@ ISSN={1045-9219},},
 @inproceedings{Vockler2006,
     author = {Jens V\"ockler and Gaurang Mehta and Yong Zhao and Ewa Deelman and Mike Wilde},
     title = {{Kickstarting Remote Applications}},
-    booktitle = {Proceedings of the 2nd Workshop on Grid Computing Environments (OGCE 06)},
+    booktitle = {2nd Workshop on Grid Computing Environments (OGCE 06)},
     year = {2006}
 }
 
@@ -3035,7 +2969,7 @@ pages={23-30},
 @inproceedings{Yu2005b,
     author = {Yu, Jia and Buyya, Rajkumar and Tham, {Chen-Khong}},
     title = {{Cost-Based} Scheduling of Scientific Workflow Application on Utility Grids},
-    booktitle = {Proceedings of the First International Conference on {e-Science} and Grid Computing},
+    booktitle = {First International Conference on {e-Science} and Grid Computing},
     year = {2005}
 },
 
@@ -3070,7 +3004,7 @@ pages={23-30},
 	year = {2013},
 	booktitle = {Euro-Par 2012: Parallel Processing Workshops},
 	volume = {7640},
-	series = {Lecture Notes in Computer Science},
+	series = {LNCS},
 	doi = {10.1007/978-3-642-36949-0\_10},
 	title = {A Science-Gateway Workload Archive to Study Pilot Jobs, User Activity, Bag of Tasks, Task Sub-steps, and Workflow Executions},
 	author = {Ferreira da Silva, Rafael and Glatard, Tristan},
@@ -3079,11 +3013,11 @@ pages={23-30},
 
 @INPROCEEDINGS{5071878,
 	author={Yang Zhang and Mandal, A. and Koelbel, C. and Cooper, K.},
-	booktitle={Cluster Computing and the Grid, 2009. CCGRID '09. 9th IEEE/ACM International Symposium on},
+	booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid},
 	title={Combined Fault Tolerance and Scheduling Techniques for Workflow Applications on Computational Grids},
 	year={2009},
 	pages={244-251},
-	doi={10.1109/CCGRID.2009.59},
+%	doi={10.1109/CCGRID.2009.59},
 }
 
 @INPROCEEDINGS{5671856,
